# scatter

./: CMakeLists.txt  README.md
cmake/Modules/: FindQwt.cmake
example/: input.txt
src/: CMakeLists.txt  DataArray.cpp  ImageDisplay.cpp  ImageDisplay.h  ImageRasterData.h  LogColormap.h  MainWindow.cpp  MainWindow.h  PSFWindow.cpp  PSFWindow.h  Plot.cpp  Plot.h  Point2D.cpp  Point2D.h  ScatterPlot.cpp  ScatterPlot.h  ScatterWindow.cpp  ScatterWindow.h  main.cpp  scatter.cpp
src/cimg/: CMakeLists.txt  DataArray.h  Point2D.cpp
src/qwt/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  Plot.cpp  main.cpp  mainwindow.cpp  mainwindow.h  plot.cpp
